agui_macros/tests/compile-fail/build_empty.rs
use agui_core::WidgetRef;
use agui_macros::build;

fn main() {
    let _widget: WidgetRef = build! {
        
    };
}
